# octacam

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  arduino_script.ino  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
arduino/2photon_trigger/: 2photon_trigger.ino  README.md
arduino_script/: arduino_script.ino
benchmarks/: README.md  bench_pipeline.py
configs/2p_1/: 40011472.pfs  octacam_config.toml  octacam_config.yaml
configs/emulate_8_cameras/: 0815-0000.pfs  0815-0007.pfs  octacam_config.toml  octacam_config.yaml
configs/flir_example/: octacam_config.toml
configs/scape_fly_facing_left_wide/: 40256533.pfs  40256541.pfs  octacam_config.toml
configs/tl_scape_fly_facing_left/: 40029805.pfs  40115076.pfs  df3d_camera_config.pfs  fictrac_camera_config.pfs  octacam_config.toml  octacam_config.yaml
configs/tl_scape_fly_facing_right/: octacam_config.yaml
configs/tl_scape_fly_facing_right_upright/: 40256541.pfs  octacam_config.yaml
configs/tl_scape_fly_facing_right_upright_cropped/: octacam_config.toml
configs/tl_scape_fly_facing_right_upright_full/: 40142892.pfs  40256541.pfs  octacam_config.toml  octacam_config.yaml
cpp/: README.md
cpp/src/: parser.hpp  video_writer.cpp
docs/: index.md  installation.md  quickstart.md  web-gui-plan.md
docs/guide/: backends.md  configuration.md  gui.md  plugins.md  processing.md  recording.md
docs/reference/: cli.md  troubleshooting.md
docs/web-gui-research/: bench_pyav_vs_subprocess.py  dim_cpp-gstreamer.md  dim_encoding.md  dim_prior-art.md  dim_pyav-vs-subprocess.md  dim_rust-stack.md  dim_strand-cam.md  dim_web-ui.md  recon.md  verdicts.md
scripts/: yaml2toml_config.py
src/: camera.cpp  camera.h  camera.hpp  main.cpp  main_window.cpp  main_window.h  main_window.hpp  parser.cpp  parser.hpp  serial.cpp  serial.hpp  timer.cpp  timer.h  timer.hpp  video_writer.cpp  video_writer.h  video_writer.hpp
src/octacam/: __init__.py  camera.py  cli.py  config.py  config_writer.py  controller.py  grid.py  nas.py  serial_link.py  session_cache.py  transfer.py  transform.py  trigger.py  writer.py
src/octacam/cameras/: __init__.py  base.py  basler.py  fake.py  flir.py  registry.py  system.py
src/octacam/gui/: main_window.py  widgets.py
src/octacam/plugins/: __init__.py  arduino.py  base.py  flywheel.py  twophoton.py
src/octacam/plugins/flywheel/: __init__.py
src/octacam/plugins/flywheel/web/: flywheel.css  flywheel.js
src/octacam/plugins/twophoton/: __init__.py
src/octacam/plugins/twophoton/web/: twophoton.css  twophoton.js
src/octacam/web/: __init__.py  app.py
src/octacam/web/static/: index.html  style.css
src/octacam/web/static/js/: app.js  arduino.js  camera.js  dirpicker.js  flywheel.js  grid.js  record.js  resize.js  save.js  theme.js  twophoton.js  util.js  view.js  ws.js
tests/: test_arduino_plugin.py  test_backends.py  test_camera.py  test_cli.py  test_config.py  test_config_writer.py  test_controller.py  test_controller_fake.py  test_fake_backend.py  test_flywheel_plugin.py  test_grid.py  test_gui_emulator.py  test_nas.py  test_plugins.py  test_serial_link.py  test_session_cache.py  test_transcode.py  test_transfer.py  test_transform.py  test_twophoton_plugin.py  test_web.py  test_writer.py
