[project]
name = "octacam"
version = "0.2.0.dev0"
description = "Preview, record, and save video streams from multiple Basler cameras"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypylon>=4.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyyaml>=6",
    "pyserial>=3.5",
    "click>=8.1",
    "pyside6>=6.7",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.scripts]
octacam = "octacam.cli:main"

[dependency-groups]
dev = [
    "av>=12",
    "psutil>=5.9",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octacam"]
