[project]
name = "octacam"
version = "0.2.0.dev0"
description = "Preview, record, and save video streams from multiple Basler cameras"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypylon>=4.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyyaml>=6",
    "click>=8.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    # uvicorn ships no WebSocket implementation on its own; the preview/
    # telemetry/jog socket (octacam serve) needs one at runtime.
    "websockets>=16.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
# Opt-in plugins (octacam.plugins.<name>) and their extra runtime deps.
arduino = ["pyserial>=3.5"]

[project.scripts]
octacam = "octacam.cli:main"

[dependency-groups]
dev = [
    "av>=12",
    "httpx>=0.28.1",
    "psutil>=5.9",
    "pytest>=8",
    # so the bundled plugins (and their tests) load in the dev environment.
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octacam"]
