[project]
name = "octacam"
version = "0.2.0.dev0"
description = "Preview, record, and save video streams from multiple scientific cameras (Basler, FLIR)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypylon>=4.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pydantic>=2",
    "typer>=0.15",
    "rich>=13.7",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    # uvicorn ships no WebSocket implementation on its own; the preview/
    # telemetry/jog socket (octacam serve) needs one at runtime.
    "websockets>=16.0",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
# Opt-in plugins (octacam.plugins.<name>) and their extra runtime deps.
arduino = ["pyserial>=3.5"]
# FLIR/Teledyne cameras use the Spinnaker SDK's PySpin wheel, which is NOT on
# PyPI (it ships with the SDK installer). This extra is therefore a documented,
# greppable install marker rather than a dependency list: install the Spinnaker
# SDK and `pip install spinnaker_python-*.whl` manually (see the README).
flir = []

[project.scripts]
octacam = "octacam.cli:main"

[dependency-groups]
dev = [
    "av>=12",
    "httpx>=0.28.1",
    "psutil>=5.9",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pyright>=1.1.390",
    # so the bundled plugins (and their tests) load in the dev environment.
    "pyserial>=3.5",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# The formatter owns wrapping; long help strings / log messages are intentional.
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Query"]

[tool.pyright]
# The library is the type-check surface; tests use stubs/fakes and monkeypatch
# private attributes, which intentionally fight static typing.
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "--cov=src/octacam --cov-report=term-missing"
